--- a/src/SmartHopper.Menu/SmartHopper.Menu.csproj
+++ b/src/SmartHopper.Menu/SmartHopper.Menu.csproj
@@ -6,7 +6,7 @@
     <TargetFrameworks>net7.0-windows;net7.0;net48</TargetFrameworks>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <TargetExt>.gha</TargetExt>
-    <NoWarn>NU1701;NETSDK1086</NoWarn>
+    <NoWarn>NU1701;NETSDK1086;SA1124;SA1200</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
