--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -105,69 +105,20 @@ jobs:
       with:
         dotnet-version: '7.0.x'
 
+    - name: Decode strong-name key
+      shell: pwsh
+      env:
+        SNK_BASE64: ${{ secrets.SIGNING_SNK_BASE64 }}
+      run: |
+        $snkBytes = [Convert]::FromBase64String($env:SNK_BASE64)
+        [IO.File]::WriteAllBytes('signing.snk', $snkBytes)
+
     - name: Restore dependencies
       run: dotnet restore SmartHopper.sln
 
     - name: Build solution
-      run: dotnet build SmartHopper.sln --configuration Release --no-restore
+      run: dotnet build SmartHopper.sln --configuration Release --no-restore /p:SignAssembly=true /p:AssemblyOriginatorKeyFile=signing.snk
 
-    - name: Decode code signing certificate
-      shell: pwsh
-      env:
-        PFX_BASE64: ${{ secrets.SIGNING_PFX_BASE64 }}
-      run: |
-        $certBytes = [Convert]::FromBase64String($env:PFX_BASE64)
-        [IO.File]::WriteAllBytes('signingCert.pfx', $certBytes)
-
-    - name: Extract manifest public key
-      shell: pwsh
-      env:
-        PFX_PASSWORD: ${{ secrets.SIGNING_PFX_PASSWORD }}
-      run: |
-        # Load code-signing cert and export public key
-        $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2('signingCert.pfx', $env:PFX_PASSWORD)
-        $rsa = $cert.GetRSAPublicKey()
-        $pubKeyBytes = $rsa.ExportSubjectPublicKeyInfo()
-        $pubKeyBase64 = [Convert]::ToBase64String($pubKeyBytes)
-        echo "PROVIDER_PUBLIC_KEY_BASE64=$pubKeyBase64" >> $GITHUB_ENV
-
-    - name: Inject manifest public key
-      shell: pwsh
-      run: |
-        Write-Host "Injecting provider manifest public key..."
-        (Get-Content src/SmartHopper.Config/ProviderManager.cs) -replace '__PROVIDER_PUBLIC_KEY_BASE64__', $env:PROVIDER_PUBLIC_KEY_BASE64 | Set-Content src/SmartHopper.Config/ProviderManager.cs
-
-    - name: Authenticode‑sign SmartHopper providers
-      shell: pwsh
-      env:
-        PFX_PASSWORD: ${{ secrets.SIGNING_PFX_PASSWORD }}
-      run: |
-        Get-ChildItem -Path ./src -Filter 'SmartHopper.Providers.*.dll' -Recurse |
-          ForEach-Object {
-            Write-Host "Signing $($_.FullName)…"
-            signtool sign /fd SHA256 /f signingCert.pfx /p $env:PFX_PASSWORD $_.FullName
-          }
-
-    - name: Configure NuGet Sources
-      shell: pwsh
-      run: |
-        # List current sources
-        Write-Host "Current NuGet sources:"
-        dotnet nuget list source
-        
-        # Add Rhino source if not already present
-        $sources = dotnet nuget list source
-        if ($sources -notmatch "https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages") {
-            Write-Host "Adding Rhino NuGet source..."
-            dotnet nuget add source "https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages" -n rhinoSource
-        } else {
-            Write-Host "Rhino NuGet source already exists."
-        }
-        
-        # Verify final configuration
-        Write-Host "Final NuGet sources:"
-        dotnet nuget list source
-        
     - name: Create Output Directory
       shell: pwsh
       run: |
