--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(SolutionDir)Solution.props" />
   
   <PropertyGroup>
-    <TargetFrameworks>net7.0-windows;net7.0;net48</TargetFrameworks>
+    <TargetFrameworks>net7.0-windows;net7.0</TargetFrameworks>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <NoWarn>NU1701;NETSDK1086;MSB3243;SA1124;SA1200</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
@@ -42,11 +42,17 @@
   </ItemGroup>
 
   <!-- For Windows only builds -->
-  <PropertyGroup Condition="$(TargetFramework.Contains('-windows')) or $(TargetFramework.StartsWith('net4'))">
+  <PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+  
+  <!-- Reference WinForms for .NET 7.0 on macOS -->
+  <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
+    <!-- Rhino 8.11 and later you can use this -->
+    <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />
+  </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
     <EditorConfigFiles Remove="..\.editorconfig" />
   </ItemGroup>
   <ItemGroup>
