--- a/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
+++ b/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
@@ -45,10 +45,9 @@
   </ItemGroup>
 
   <!-- Reference WinForms for .NET 7.0 on macOS -->
-  <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-    <!-- Rhino 8.11 and later you can use this -->
+  <!-- <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
     <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />
-  </ItemGroup>
+  </ItemGroup> -->
 
   <ItemGroup>
     <EditorConfigFiles Remove="..\.editorconfig" />
