--- a/src/SmartHopper.Providers.MistralAI/SmartHopper.Providers.MistralAI.csproj
+++ b/src/SmartHopper.Providers.MistralAI/SmartHopper.Providers.MistralAI.csproj
@@ -39,9 +39,15 @@
   </PropertyGroup>
 
   <!-- Reference WinForms for .NET 7.0 on macOS -->
-  <!-- <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-    <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />
-  </ItemGroup> -->
+  <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
+    <!-- Rhino 8.11 and later you can use this -->
+    <!-- <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" /> -->
+
+    <!-- Rhino 8.10 and earlier -->
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net48" Version="1.0.3" ExcludeAssets="all" GeneratePathProperty="true" />
+    <Reference Include="$(PkgMicrosoft_NETFramework_ReferenceAssemblies_net48)\build\.NETFramework\v4.8\System.Windows.Forms.dll" Private="False" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.11" ExcludeAssets="runtime" />
+  </ItemGroup>
 
   <ItemGroup>
     <EditorConfigFiles Remove="..\.editorconfig" />
