fix(settings): prevent settings from being erased when providers are not yet loaded

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,3 +26,4 @@
 /NuGet.Config       @marc-romu
 /Solution.props     @marc-romu
 /Directory.Build.props @marc-romu
+/Directory.Build.targets @marc-romu
