--- a/.github/workflows/ci-dotnet-tests.yml
+++ b/.github/workflows/ci-dotnet-tests.yml
@@ -1,10 +1,23 @@
-name: .NET CI
+name: 🧪 .NET CI
+# Description: This workflow runs .NET tests on the SmartHopper solution to ensure that changes do not break functionality.
+# 
+# Triggers:
+# - push to main branch
+# - pull_request targeting main branch
+# 
+# Permissions:
+# - contents: read - Required to read repository content
+# - pull-requests: read - Required to read pull request information
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   test:
