feat(dialogs): added smarthopper logo in webchat, message, about and settings dialogs

--- a/src/SmartHopper.Config/SmartHopper.Config.csproj
+++ b/src/SmartHopper.Config/SmartHopper.Config.csproj
@@ -72,4 +72,7 @@
       <LastGenOutput>providersResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\smarthopper.ico" />
+  </ItemGroup>
 </Project>
