feat(webtools): new web tools to retrieve html and json from the web

--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Grasshopper" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="RhinoCommon" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
