chore: preparing release to 0.3.0-alpha

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -83,6 +83,9 @@
 - name: "component: AI Chat Output"
   color: "000"
   description: "Issues related to the Chat Output component"
+- name: "component: Context Parameters"
+  color: "000"
+  description: "Issues related to the Context Parameters component"
 - name: "component: Deconstruct Metrics"
   color: "000"
   description: "Issues related to the Deconstruct Metrics component"
@@ -105,9 +108,12 @@
 - name: "feature: Settings"
   color: "000"
   description: "Issues related to the Settings menu"
-- name: "feature: AI"
+- name: "feature: AI Tools"
   color: "000"
-  description: "Issues related to the AI features"
+  description: "Issues related to the AI tools"
+- name: "feature: Provider Manager"
+  color: "000"
+  description: "Issues related to the Provider Manager"
 - name: "feature: UI"
   color: "000"
   description: "Issues related to the UI features"
