--- a/.github/workflows/ci-dotnet-tests.yml
+++ b/.github/workflows/ci-dotnet-tests.yml
@@ -31,6 +31,23 @@ jobs:
         with:
           dotnet-version: '7.0.x'
 
+      - name: Prepare strong-name key
+        shell: pwsh
+        env:
+          SIGNING_SNK_BASE64: ${{ secrets.SIGNING_SNK_BASE64 }}
+        run: |
+          if (-not (Test-Path signing.snk)) {
+            if ($env:SIGNING_SNK_BASE64) {
+              Write-Host "Decoding signing.snk from Base64 secret"
+              ./Sign-StrongNames.ps1 -Base64 $env:SIGNING_SNK_BASE64
+            } else {
+              Write-Host "Generating temporary signing.snk"
+              ./Sign-StrongNames.ps1 -Generate
+            }
+          } else {
+            Write-Host "signing.snk already exists"
+          }
+
       - name: Restore dependencies
         run: dotnet restore SmartHopper.sln
 
