--- a/src/SmartHopper.Components/SmartHopper.Components.csproj
+++ b/src/SmartHopper.Components/SmartHopper.Components.csproj
@@ -32,7 +32,7 @@
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
     <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.11" />
   </ItemGroup>
 
   <ItemGroup>
@@ -54,7 +54,7 @@
     <!-- Rhino 8.10 and earlier -->
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies.net48" Version="1.0.3" ExcludeAssets="all" GeneratePathProperty="true" />
     <Reference Include="$(PkgMicrosoft_NETFramework_ReferenceAssemblies_net48)\build\.NETFramework\v4.8\System.Windows.Forms.dll" Private="False" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.11" ExcludeAssets="runtime" />
+    <!-- <PackageReference Include="System.Drawing.Common" Version="8.0.11" ExcludeAssets="runtime" /> -->  <!-- Already referenced above -->
   </ItemGroup>
 
   <ItemGroup>
