--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,6 +9,9 @@
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    
+    <!-- treat StyleCop.Analyzers rules as warnings for code cleanup -->
+    <CodeAnalysisRuleSeverity>warning</CodeAnalysisRuleSeverity>
   </PropertyGroup>
 
   <ItemGroup>
